--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Когнитивные искажения - Aleksandr Suzdaltcev</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header section-background">
         <div class="container">
             <h1 class="header-title">
-                
+                <span class="light-text">Когнитивные</span><br>
+                <span class="light-text">искажения</span><br> в программировании
             </h1>
+            <img src="../img/main.png" alt="Когнитивные искажения в программировании" class="header-image">
+            <div class="header-content">
+                <div class="header-column">
+                    <p class="dark-text font-size-16 line-height-16 open-sans">
+                        Мы, разработчики, часто сталкиваемся с проблемами, которые идут вразрез с нашей продуктивностью. Но мы часто игнорируем целостную картину. Некоторые из этих проблем малозаметны, некоторые существенны. Иногда с ними можно как-то справиться, а иногда, к сожалению, нет.
+                    </p>
+                </div>
+                <div class="header-column">
+                    <p class="dark-text font-size-16 line-height-16 open-sans">
+                        Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.
+                    </p>
+                    <p class="dark-text font-size-16 line-height-16 open-sans">
+                        Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
+                    </p>
+                    <a href="#" class="button">ПОДРОБНЕЕ</a>
+                </div>
+            </div>
         </div>
     </header>
     <main class="main">
