Добавление новых секций и стилей в index.html для описания когнитивных искажений, включая секции предварительного просмотра и навигации, а также стили для улучшения визуального восприятия.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,85 @@
             </div>
         </div>
     </header>
+    <section id="preview-image" class="preview-section">
+        <div class="container">
+            <h2 class="preview-title">
+                Что же это такое,<br>
+                <span class="main-color">когнитивные искажения?</span>
+            </h2>
+            <p class="preview-subtitle">
+                Что такое когнитивные искажения. Petrovna Channel
+            </p>
+            <a href="https://www.youtube.com/watch?v=jie9AizBqss" target="_blank" class="video-link">
+                <img src="img/Rectangle 26.png" alt="Что такое когнитивные искажения" class="video-preview">
+            </a>
+        </div>
+    </section>
+    <section id="navigation" class="navigation-section">
+        <div class="container">
+            <div class="navigation-cards">
+                <div class="card title-card">
+                    <h2 class="navigation-title">
+                        <span class="main-color">5 когнитивных<br>
+                        искажений</span><br>
+                        <span class="white">о существовании<br>
+                        которых стоит<br>
+                        помнить</span>
+                    </h2>
+                </div>
+                <a href="#ikea-effect" class="card">
+                    <div class="card-number">1</div>
+                    <h3 class="card-title">Эффект ИКЕА</h3>
+                    <p class="card-description">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+                </a>
+                <a href="#premature-optimization" class="card">
+                    <div class="card-number">2</div>
+                    <h3 class="card-title">Преждевременная оптимизация</h3>
+                    <p class="card-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                </a>
+                <a href="#novelty-bias" class="card">
+                    <div class="card-number">3</div>
+                    <h3 class="card-title">Искажение новизны</h3>
+                    <p class="card-description">Вы даёте более высокую оценку тем событиям, которые произошли недавно, и недооцениваете более старые.</p>
+                </a>
+                <a href="#hyperbolic-discounting" class="card">
+                    <div class="card-number">4</div>
+                    <h3 class="card-title">Гиперболическое обесценивание</h3>
+                    <p class="card-description">Вы гонитесь за немедленной маленькой выгодой и игнорируете более крупную, недоступную сейчас, но доступную в будущем.</p>
+                </a>
+                <a href="#planning-fallacy" class="card">
+                    <div class="card-number">5</div>
+                    <h3 class="card-title">Ошибка планирования</h3>
+                    <p class="card-description">Неправильно рассчитывать время необходимое для завершения задачи.</p>
+                </a>
+            </div>
+        </div>
+    </section>
+    <section id="ikea-effect" class="cognitive-bias-section">
+        <div class="container">
+            <div class="bias-header">
+                <div class="bias-header-left">
+                    <img src="img/1 1.png" alt="Эффект ИКЕА" class="bias-image">
+                </div>
+                <div class="bias-header-right">
+                    <p class="bias-category">Когнитивные искажения</p>
+                    <h2 class="bias-title">Эффект ИКЕА</h2>
+                    <p class="bias-description">Вы переоцениваете собственные решения, и, как следствие, недооцениваете решения других.</p>
+                </div>
+            </div>
+            
+            <h3 class="manifestation-title">Как проявляется</h3>
+            
+            <div class="manifestation-content">
+                <div class="manifestation-left">
+                    <p>Когнитивное искажение называется так из-за того, что потребители зачастую предпочитают покупать товары, которые они могут собрать сами, а не уже собранные кем-то.</p>
+                </div>
+                <div class="manifestation-right">
+                    <p>Мы склонны переоценивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <main class="main">
         <div class="container">
             <h2 class="main-title">
