Добавление секции "Преждевременная оптимизация" в index.html и обновление стилей для улучшения визуального восприятия, включая изменения в line-height и новые стили для элементов секции когнитивных искажений.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <p class="dark-text font-size-16 line-height-16 open-sans">
                         Вместе они формируют что-то вроде замкнутого цикла, и это может привести к длительной потере продуктивности, багам и бесконечному разочарованию.
                     </p>
+                    <br>
                     <p class="dark-text font-size-16 line-height-16 open-sans">
                         Если мы сможем минимизировать воздействие одного или нескольких из этих факторов, то сможем сломать и цикл, а остатки нейтрализовать.
                     </p>
@@ -111,6 +112,31 @@
                 </div>
                 <div class="manifestation-right">
                     <p>Мы склонны переоценивать наши собственные решения и недооценивать решения других. Если вы когда-то работали в компании, которая использовала тупой внутренний инструмент вместо более удобного готового решения, вы понимаете, о чём я говорю.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="premature-optimization" class="cognitive-bias-section">
+        <div class="container">
+            <div class="bias-header">
+                <div class="bias-header-left">
+                    <img src="img/2.png" alt="Преждевременная оптимизация" class="bias-image">
+                </div>
+                <div class="bias-header-right">
+                    <p class="bias-category">Когнитивные искажения</p>
+                    <h2 class="bias-title">Преждевременная оптимизация</h2>
+                    <p class="bias-description">Вы оптимизируете что-то задолго до того, как в этом появляется необходимость.</p>
+                </div>
+            </div>
+            
+            <h3 class="manifestation-title">Как проявляется</h3>
+            
+            <div class="manifestation-content">
+                <div class="manifestation-left">
+                    <p>Если вы добавите аэродинамический спойлер к своему старому автомобилю вместо ремонта мотора, то автомобиль не станет быстрее.</p>
+                </div>
+                <div class="manifestation-right">
+                    <p>Отличный пример: писать максимально подтюненный и высокопроизводительный код для всего лишь экспериментального проекта.</p>
                 </div>
             </div>
         </div>
