Исправление пути к изображению в index.html для корректного отображения заголовка.

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
                 <span class="light-text">Когнитивные</span><br>
                 <span class="light-text">искажения</span><br> в программировании
             </h1>
-            <img src="../img/main.png" alt="Когнитивные искажения в программировании" class="header-image">
+            <img src="img/main.png" alt="Когнитивные искажения в программировании" class="header-image">
             <div class="header-content">
                 <div class="header-column">
                     <p class="dark-text font-size-16 line-height-16 open-sans">
