Обновление изображения предварительного просмотра в index.html, удаление старого изображения и изменение z-index для улучшения наложения элементов в стилях.

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
                 Что такое когнитивные искажения. Petrovna Channel
             </p>
             <a href="https://www.youtube.com/watch?v=jie9AizBqss" target="_blank" class="video-link">
-                <img src="img/Rectangle 26.png" alt="Что такое когнитивные искажения" class="video-preview">
+                <img src="img/preview.png" alt="Что такое когнитивные искажения" class="video-preview">
             </a>
         </div>
     </section>
