Обновление секции предварительного просмотра в index.html: изменение структуры заголовка и добавление новых стилей для улучшения визуального восприятия. Также добавлены стили для секций с белым и серым фоном в style.css, включая новые CSS переменные и классы для центрирования и отступов.

--- a/src/index.html
+++ b/src/index.html
@@ -37,22 +37,16 @@
             </div>
         </div>
     </header>
-    <section id="preview-image" class="preview-section">
+    <section class="bg-white" id="preview-image">
         <div class="container">
-            <h2 class="preview-title">
-                Что же это такое,<br>
-                <span class="main-color">когнитивные искажения?</span>
-            </h2>
-            <p class="preview-subtitle">
-                Что такое когнитивные искажения. Petrovna Channel
-            </p>
-            <a href="https://www.youtube.com/watch?v=jie9AizBqss" target="_blank" class="video-link">
-                <img src="img/preview.png" alt="Что такое когнитивные искажения" class="video-preview">
-            </a>
+            <h2 class="center margin-0">Что же это такое, <br><span class="dark-color"> когнитивные
+                    искажения?</span> </h2>
+            <p class="center margin-30">Что такое когнитивные искажения. Petrovna Channel</p>
+            <a class="video-container shadow" href="https://youtu.be/jie9AizBqss?feature=shared"><img src="img/preview.png" alt="izo"></a>
         </div>
     </section>
-    <section id="navigation" class="navigation-section">
-        <div class="container">
+    <section id="navigation" class="bg-grey">
+        <div class="container" style="padding-top: 200px; margin-top: -200px;">
             <div class="navigation-cards">
                 <div class="card title-card">
                     <h2 class="navigation-title">
@@ -91,7 +85,7 @@
             </div>
         </div>
     </section>
-    <section id="ikea-effect" class="cognitive-bias-section">
+    <section id="ikea-effect" class="cognitive-bias-section bg-grey">
         <div class="container">
             <div class="bias-header">
                 <div class="bias-header-left">
@@ -116,7 +110,7 @@
             </div>
         </div>
     </section>
-    <section id="premature-optimization" class="cognitive-bias-section">
+    <section id="premature-optimization" class="cognitive-bias-section bg-grey">
         <div class="container">
             <div class="bias-header">
                 <div class="bias-header-left">
@@ -141,7 +135,7 @@
             </div>
         </div>
     </section>
-    <section id="distortion-of-novelty" class="cognitive-bias-section">
+    <section id="distortion-of-novelty" class="cognitive-bias-section bg-grey">
         <div class="container">
             <div class="bias-header">
                 <div class="bias-header-left">
