Обновление секции подписки в index.html: удаление лишних элементов и добавление новых стилей для улучшения визуального восприятия. Изменены стили в style.css для подвала и формы подписки, включая новые отступы и оформление элементов.

--- a/src/index.html
+++ b/src/index.html
@@ -211,13 +211,6 @@
             </div>
         </div>
     </section>
-    <main class="main">
-        <div class="container">
-            <h2 class="main-title">
-                
-            </h2>
-        </div>
-    </main>
     <footer class="footer">
         <div class="container">
             <div class="footer-subscription">
@@ -227,13 +220,16 @@
                         <p>Подпишитесь на обновления</p>
                     </div>
                     <div class="subscription-form">
-                        <input type="email" placeholder="Ваша электронная почта" class="email-input">
-                        <button type="submit" class="send-button"></button>
+                        <span>Электронная почта</span>
+                        <div class="input-group">
+                            <input type="email" placeholder="Ваша электронная почта" class="email-input">
+                            <button type="submit" class="send-button"></button>
+                        </div>
+                        <p class="agreement-text">
+                            Подписываясь, вы принимаете <a href="#" class="terms-link">правила сервиса</a>
+                        </p>
                     </div>
                 </div>
-                <p class="agreement-text">
-                    Подписываясь, вы принимаете <a href="#" class="terms-link">правила сервиса</a>
-                </p>
             </div>
             
             <div class="footer-info">
