Обновление секции "Эффект ИКЕА" в index.html: изменение классов и удаление лишнего изображения. Добавление новых стилей в style.css для улучшения визуального восприятия, включая фоновое изображение и изменения в отступах.

--- a/src/index.html
+++ b/src/index.html
@@ -85,11 +85,11 @@
             </div>
         </div>
     </section>
-    <section id="ikea-effect" class="cognitive-bias-section bg-grey">
+    <section id="ikea-effect" class="section-background">
         <div class="container">
             <div class="bias-header">
                 <div class="bias-header-left">
-                    <img src="img/1 1.png" alt="Эффект ИКЕА" class="bias-image">
+                    <img src="img/1.png" alt="Эффект ИКЕА" class="bias-image">
                 </div>
                 <div class="bias-header-right">
                     <p class="bias-category">Когнитивные искажения</p>
@@ -110,7 +110,7 @@
             </div>
         </div>
     </section>
-    <section id="premature-optimization" class="cognitive-bias-section bg-grey">
+    <section id="premature-optimization" class="cognitive-bias-section">
         <div class="container">
             <div class="bias-header">
                 <div class="bias-header-left">
@@ -135,7 +135,7 @@
             </div>
         </div>
     </section>
-    <section id="distortion-of-novelty" class="cognitive-bias-section bg-grey">
+    <section id="distortion-of-novelty" class="cognitive-bias-section">
         <div class="container">
             <div class="bias-header">
                 <div class="bias-header-left">
@@ -180,7 +180,7 @@
                     <p>Вы когда-нибудь откладывали написание теста? Ловили себя на использовании клавиш-стрелок в Vim? Поздравляю, у вас наблюдается гиперболическое обесценивание.</p>
                 </div>
                 <div class="manifestation-right">
-                    <p>Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
+                    <p>Немедленная выгода от использования чего-то быстродоступного значительно смягчает боль, которую нужно перетерпеть, чтобы усвоить правильный синтаксис для перемещения на нужную<br>строчку. Но как только вы поймёте как перемещаться быстрее, выгода в будущем намного выше. В итоге вы сохраните много времени.</p>
                 </div>
             </div>
         </div>
@@ -202,10 +202,10 @@
             
             <div class="manifestation-content">
                 <div class="manifestation-left">
-                    <p>Одно из искажений, которое должно признать большинство из нас. И менеджеры проекта, и сами пользователи продукта — все склонны ставить сроки, в которые невозможно закончить запланированное.</p>
+                    <p>Одно из искажений, которое должно признать большинство из нас.<br> И менеджеры проекта, и сами пользователи продукта — все<br> склонны ставить сроки, в которые невозможно закончить запланированное.</p>
                 </div>
                 <div class="manifestation-right">
-                    <p>Это отлично выражается в старом афоризме:</p>
+                    <p>Это отлично выражается в старом афоризме:</p><br>
                     <p>Первые 90% готового кода отнимают первые 90% времени разработки. Оставшиеся 10% отнимают вторые 90% времени разработки.</p>
                 </div>
             </div>
